k8s/engine-license-switch-control-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine-license-switch-control-service
spec:
  type: ClusterIP
  selector:
    app: engine-license-switch-control-service
  ports:
  - port: 8081
    targetPort: 8081
