k8s/fmeflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fmeflow-svc
spec:
  type: ClusterIP
  selector:
    app: fmeflow
  ports:
  - port: 80
    targetPort: 8080
